<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="language">pl</string>
    <string name="country">PL</string>
    <string name="app_name">BKSkup3</string>
    <string name="management">Zarządzanie</string>
    <string name="herds_management">Stada</string>
    <string name="new_herd">Nowe stado</string>
    <string name="edit_herd">Edytuj stado</string>
    <string name="edit_agent">Dane agenta</string>
    <string name="edit_company">Dane firmy</string>
    <string name="vat_rates">Stawki VAT</string>
    <string name="choose_herd">Wybierz stado</string>
    <string name="open_purchases">Otwarte skupy</string>
    <string name="new_invoice">Nowa faktura</string>
    <string name="edit_invoice">Edycja faktury</string>
    <string name="hentno_input">Numer stada</string>
    <string name="farmno_input">Numer gospodarstwa</string>
    <string name="cowno_input">Numer kolczyka</string>
    <string name="new_hent">Nowy kontrahent</string>
    <string name="find_hent">Wyszukiwanie kontrahenta</string>
    <string name="edit_hent">Edycja kontrahenta</string>
    <string name="edit_cow">Edycja zwierzęcia</string>
    <string name="new_cow">Nowe zwierzę</string>
    <string name="manage_classes">Zarządzanie klasami</string>
    <string name="manage_stocks">Zarządzanie rasami</string>
    <string name="new_cowclass">Nowa klasa</string>
    <string name="edit_cowclass">Edycja klasy</string>
    <string name="new_stock">Nowa rasa</string>
    <string name="edit_stock">Edycja rasy</string>
    <string name="accountno_input">Numer konta</string>
    <string name="manage_deductions">Odliczenia</string>
    <string name="manage_hents">Kontrahenci</string>
    <string name="new_deduction">Nowe odliczenie</string>
    <string name="edit_deduction">Edycja odliczenia</string>
    <string name="viewing_purchase">Skup na stado %03d</string>
    <string name="scan_farmno">Numer gospodarstwa</string>
    <string name="passport_scanner">Rozpoznawanie paszportów</string>
    <string name="print_invoice">Drukowanie</string>
    <string name="preference">Preferencje</string>
    <string name="repo_management">Repozytorium</string>
    <string name="purchase_history">Historia skupów</string>
    <string name="print_preview">Podgląd wydruku</string>
    <string name="quick_cow">Szybkie wprowadzanie</string>
    <string name="choose_scanner">Wybierz skaner</string>
    <string name="choose_printer">Wybierz drukarkę</string>
    <string name="bcscan_service">Usługa skanowania</string>
    <string name="view_invoice">Podgląd faktury</string>
    <string name="view_cow">Podgląd zwierzęcia</string>
    <string name="document_cfg">Konfiguracja dokumentów</string>
    <string name="edit_profiles">Edycja profili</string>
    <string name="invoice_settings">Ustawienia faktur</string>
    <string name="menuSaveBtnCaption">Zapisz</string>
    <string name="menuCancelBtnCaption">Anuluj</string>
    <string name="menuContinueBtnCaption">Dalej</string>
    <string name="menuFinishBtnCaption">Koniec</string>
    <string name="menuAddBtnCaption">Dodaj</string>
    <string name="menuScanBtnCaption">Skanuj</string>
    <string name="menuOCRBtnCaption">Rozpoznaj</string>
    <string name="menuSaveAndPrintBtnCaption">Zapisz i Drukuj</string>
    <string name="menuManagementBtnCaption">Zarządzanie</string>
    <string name="menuNewInvoiceBtnCaption">Nowy zakup</string>
    <string name="menuDeleteBtnCaption">Usuń</string>
    <string name="menuEditBtnCaption">Edytuj</string>
    <string name="menuFindBtnCaption">Szukaj</string>
    <string name="menuPrintBtnCaption">Drukuj</string>
    <string name="menuDownloadBtnCaption">Pobierz</string>
    <string name="menuFillBtnCaption">Uzupełnij</string>
    <string name="menuViewBtnCaption">Pokaż</string>
    <string name="menuCloseBtnCaption">Zamknij</string>
    <string name="menuOpenBtnCaption">Otwórz</string>
    <string name="menuEditProfilesBtnCaption">Edytuj profile</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="continueBtnCaption">Dalej</string>
    <string name="addBtnCaption">Dodaj</string>
    <string name="newBtnCaption">Nowy</string>
    <string name="copyBtnCaption">Przepisz</string>
    <string name="changeBtnCaption">Zmień</string>
    <string name="abortBtnCaption">Przerwij</string>
    <string name="abandonBtnCaption">Porzuć</string>
    <string name="retryBtnCaption">Ponów</string>
    <string name="yesAllCaps">TAK</string>
    <string name="noAllCaps">NIE</string>
    <string name="purchaseHistoryBtnCaption">Historia skupów</string>
    <string name="managementBtnCaption">Zarządzanie</string>
    <string name="newPurchaseBtnCaption">Nowy skup</string>
    <string name="settingsBtnCaption">Ustawienia</string>
    <string name="editBtnCaption">Edytuj</string>
    <string name="setBtnCaption">Wstaw</string>
    <string name="nowBtnCaption">Teraz</string>
    <string name="chooseBtnCaption">Wybierz</string>
    <string name="takeBtnCaption">Pobierz</string>
    <string name="findBtnCaption">Szukaj</string>
    <string name="herdsManagementItemTitle">Konfiguracja stad</string>
    <string name="agentManagementItemTitle">Dane agenta</string>
    <string name="companyManagementItemTitle">Dane firmy</string>
    <string name="accessManagementItemTitle">Hasło do \'Zarządzanie\'</string>
    <string name="vatRatesManagementItemTitle">Stawki VAT</string>
    <string name="stockManagementItemTitle">Rasy</string>
    <string name="classesManagementItemTitle">Klasy</string>
    <string name="deductionManagementItemTitle">Odliczenia</string>
    <string name="hentsManagementItemTitle">Kontrahenci</string>
    <string name="repoManagementItemTitle">Repozytorium</string>
    <string name="docsCfgManagementItemTitle">Dokumenty</string>
    <string name="invSettingsManagementItemTitle">Faktury</string>
    <string name="enter_your_old_password_header" >"Wpisz stare hasło"</string>
    <string name="enter_your_old_pin_header" >"Wpisz stary kod PIN"</string>
    <string name="changePasswordActivityLbl" >"Zmiana hasła"</string>
    <string name="changePINActivityLbl" >"Zmiana kodu PIN"</string>
    <string name="choose_your_new_password_header" >"Wybierz nowe hasło"</string>
    <string name="choose_your_new_pin_header" >"Wybierz nowy kod PIN"</string>
    <string name="confirm_your_password_header" >"Potwierdź hasło"</string>
    <string name="confirm_your_pattern_header" >"Potwierdź wzór"</string>
    <string name="confirm_your_pin_header" >"Potwierdź kod PIN"</string>
    <string name="confirm_passwords_dont_match" >"Hasła nie są identyczne"</string>
    <string name="confirm_pins_dont_match" >"Kody PIN nie są identyczne"</string>
    <string name="password_changed_toast" >"Hasło zostało zmienione"</string>
    <string name="wrongPIN">Niewłaściwy PIN</string>
    <string name="wrongPassword">Niewłaściwe hasło</string>
    <string name="password_too_short" >"Liczba znaków w haśle musi wynosić co najmniej %d"</string>
    <string name="pin_too_short" >"Liczba znaków w kodzie PIN musi wynosić co najmniej %d"</string>
    <string name="press_continue" >"Po zakończeniu naciśnij Kontynuuj"</string>
    <string name="hintCompanyName">Wpisz nazwę firmy</string>
    <string name="herdNumberLblCaption">Numer</string>
    <string name="herdAddressLblCaption">Adres</string>
    <string name="streetLblCaption">Ulica</string>
    <string name="hintStreetName">Wpisz ulice</string>
    <string name="poBoxLblCaption">Nr domu</string>
    <string name="hintPoBox">Wpisz numer domu</string>
    <string name="cityLblCaption">Miasto</string>
    <string name="hintCityName">Wpisz miasto</string>
    <string name="zipLblCaption">Kod pocztowy</string>
    <string name="hintZipCode">Wpisz kod pocztowy</string>
    <string name="agentCodeLblCaption">Kod agenta</string>
    <string name="hintAgentCode">Wpisz kod agenta</string>
    <string name="agentNameLblCaption">Nazwa agenta</string>
    <string name="hintAgentName">Wpisz nazwę agenta</string>
    <string name="plateNoLblCaption">Nr rejestracyjny</string>
    <string name="hintPlateNo">Wpisz numer rejestracyjny</string>
    <string name="hintHerdNo">Wpisz numer stada 001-999</string>
    <string name="errEnterStreet">Wpisz ulice</string>
    <string name="errEnterPOBox">Wpisz numer domu</string>
    <string name="errEnterCity">Wpisz miasto</string>
    <string name="errEnterZip">Wpisz kod pocztowy</string>
    <string name="errDuplicateHerdNo">Stado o numerze %03d juz istnieje</string>
    <string name="errHerdNotSelected">Wybierz stado</string>
    <string name="askDeleteHerd">Usunąć stado o numerze %03d?</string>
    <string name="repoAddressLblCaption">Adres</string>
    <string name="hintRepoAddress">Wpisz adres repozytorium</string>
    <string name="repoLoginLblCaption">Login</string>
    <string name="hintRepoLogin">Wpisz login do repozytorium</string>
    <string name="repoPasswordLblCaption">Hasło</string>
    <string name="hintRepoPassword">Wpisz hasło do repozytorium</string>
    <string name="errEnterAgentPlateNo">Wpisz numer rejestracyjny samochodu agenta</string>
    <string name="errEnterAgentCode">Wpisz kod agenta</string>
    <string name="companyNameLblCaption">Nazwa firmy</string>
    <string name="farmNoLblCaption">Nr gospodarstwa</string>
    <string name="hintFarmNo">Wpisz numer gospodarstwa</string>
    <string name="cellPhoneNoLblCaption">Nr tel. kom.</string>
    <string name="hintCellPhoneNo">Wpisz nr tel. komórkowego</string>
    <string name="phoneNoLblCaption">Nr telefonu</string>
    <string name="hintPhoneNo">Wpisz numer telefonu</string>
    <string name="emailLblCaption">Adres email</string>
    <string name="hintEmail">Wpisz adres email</string>
    <string name="fiscalLblCaption">NIP</string>
    <string name="invoiceCustomNumberLblCaption">Numer</string>
    <string name="invoiceHentAliasLblCaption">Kontrahent</string>
    <string name="invoiceCowAmountLblCaption">Ilość</string>
    <string name="invoiceTotalNetLblCaption">Wartość netto</string>
    <string name="invoiceTotalGrossLblCaption">Wartość brutto</string>
    <string name="cowSexXX">XX</string>
    <string name="cowSexXY">XY</string>
    <string name="cowSexNONE">BRAK</string>
    <string name="payDueDays3">3 dni</string>
    <string name="payDueDays7">7 dni</string>
    <string name="payDueDays14">14 dni</string>
    <string name="payDueDays21">21 dni</string>
    <string name="openPurchasesBtnCaption">Otwarte skupy</string>
    <string name="cowNoLblCaption">Nr kolczyka</string>
    <string name="cowWeightLblCaption">Waga</string>
    <string name="cowClassLblCaption">Klasa</string>
    <string name="cowClassCodeLblCaption">Kod klasy</string>
    <string name="cowClassNameLblCaption">Nazwa</string>
    <string name="cowClassPredefSexLblCaption">Płeć</string>
    <string name="cowClassPricePerKgLblCaption">Cena za kg</string>
    <string name="hintClassCode">Wpisz kod klasy</string>
    <string name="hintClassName">Wpisz nazwę klasy</string>
    <string name="hintCowClassPricePerKg">Wpisz domyślną cenę za kg</string>
    <string name="cowNetPriceLblCaption">Cena netto</string>
    <string name="cowNetPricePerKgLblCaption">Za kg</string>
    <string name="cowStockNameLblCaption">Nazwa rasy</string>
    <string name="cowStockCodeLblCaption">Kod rasy</string>
    <string name="hintStockName">Wpisz pełną nazwę rasy</string>
    <string name="hintStockCode">Wpisz kod rasy</string>
    <string name="deductionCodeLblCaption">Kod</string>
    <string name="hintDeductionCode">Wpisz kod identyfikujący odliczenie</string>
    <string name="deductionFractionLblCaption">Procent</string>
    <string name="hintDeductionFraction">Wpisz procent kwoty netto do odliczenia</string>
    <string name="deductionReasonLblCaption">Powód</string>
    <string name="hintDeductionReason">Wpisz uzasadnienie odliczenia</string>
</resources>