<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuNewInvoice"
          android:title="@string/menuNewInvoiceBtnCaption"
          android:icon="@drawable/buy"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/menuEditInvoice"
          android:title="@string/menuEditBtnCaption"
          android:icon="@drawable/edit"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/menuDeleteInvoice"
          android:title="@string/menuDeleteBtnCaption"
          android:icon="@drawable/remove"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/menuPrintInvoice"
          android:title="@string/menuPrintBtnCaption"
          android:icon="@drawable/print"
          android:showAsAction="ifRoom"
            />
</menu>

