<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/widget56"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

        >

    <TableLayout
            android:id="@+id/TableLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:id="@+id/TextView01"
                      android:layout_width="0dp"
                      android:layout_weight="0.25"
                      android:text="@string/cowClassNameLblCaption"
                      style="@style/label"/>

            <EditText android:id="@+id/cowClassNameEditBox"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.75"
                      android:maxLength="@integer/MAX_CLASSNAME"
                      android:inputType="text"
                      android:hint="@string/hintClassName"
                      style="@style/input"/>

        </TableRow>


        <TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:id="@+id/TextView05"
                      android:layout_width="0dp"
                      android:layout_weight="0.25"
                      android:text="@string/cowClassCodeLblCaption"
                      style="@style/label"/>

            <EditText android:id="@+id/classCodeEditBox"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.75"
                      android:maxLength="@integer/MAX_CLASSCODE"
                      android:inputType="textCapCharacters"
                      android:hint="@string/hintClassCode"
                      style="@style/input"/>
        </TableRow>

        <TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:id="@+id/TextView07"
                      android:layout_width="0dp"
                      android:layout_weight="0.25"
                      android:text="@string/cowClassPredefSexLblCaption"
                      style="@style/label"/>

            <com.bk.bkskup3.widgets.CowSexButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cowClassPredefSexBtn"
                    android:layout_weight="0.75"
                    />


        </TableRow>


        <TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:id="@+id/TextView09"
                      android:layout_width="0dp"
                      android:layout_weight="0.25"
                      android:text="@string/cowClassPricePerKgLblCaption"
                      style="@style/label"/>

            <EditText android:id="@+id/cowClassPricePerKgBox"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.75"
                      android:inputType="numberDecimal"
                      android:hint="@string/hintCowClassPricePerKg"
                      style="@style/input"/>
        </TableRow>


    </TableLayout>

</ScrollView>

