<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/widget56"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
        >

    <TableLayout
            android:id="@+id/TableLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:id="@+id/TextView01"
                      android:layout_width="0dp"
                      android:layout_weight="0.25"
                      android:text="@string/cowStockNameLblCaption"
                      style="@style/label"/>

            <EditText android:id="@+id/cowStockNameEditBox"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.75"
                      android:maxLength="@integer/MAX_STOCKNAME"
                      android:inputType="text"
                      android:hint="@string/hintStockName"
                      style="@style/input"/>

        </TableRow>


        <TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:id="@+id/TextView05"
                      android:layout_width="0dp"
                      android:layout_weight="0.25"
                      android:text="@string/cowStockCodeLblCaption"
                      style="@style/label"/>

            <EditText android:id="@+id/cowStockCodeEditBox"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.75"
                      android:maxLength="@integer/MAX_STOCKCODE"
                      android:inputType="textCapCharacters"
                      android:hint="@string/hintStockCode"
                      style="@style/input"/>
        </TableRow>

    </TableLayout>

</ScrollView>

