<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget56"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView05"
                style="@style/label"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:text="@string/deductionCodeLblCaption" />

            <EditText
                android:id="@+id/deductionCodeBox"
                style="@style/input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:hint="@string/hintDeductionCode"
                android:inputType="textCapCharacters"
                android:maxLength="@integer/MAX_DEDUCTIONCODE" />


        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView01"
                style="@style/label"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:text="@string/deductionFractionLblCaption" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fractionEditBox"
                    style="@style/input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:hint="@string/hintDeductionFraction"
                    android:inputType="numberDecimal" />

                <LinearLayout
                    style="@style/SegmentedButtonContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical">

                    <Button
                        android:id="@+id/deductionFractionPlusBtn"
                        style="@style/SegmentedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="+" />

                    <Button
                        android:id="@+id/deductionFractionMinusBtn"
                        style="@style/SegmentedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="-" />
                </LinearLayout>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView09"
                style="@style/label"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:text="@string/deductionReasonLblCaption" />

            <EditText
                android:id="@+id/deductionReasonBox"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.75"
                android:gravity="top|left"
                android:hint="@string/hintDeductionReason"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="@integer/MAX_DEDUCTIONREASON"
                android:maxLines="3"
                android:minLines="3"
                android:textSize="24sp" />
        </TableRow>


    </TableLayout>

</ScrollView>

