<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_marginTop="50dp"
              android:layout_marginBottom="50dp"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="0dp"
                  android:layout_weight="3"
                  android:orientation="horizontal">

        <Button android:id="@+id/newPurchaseBtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/newPurchaseBtnCaption"
                android:background="@drawable/green_button"
                android:layout_margin="2dp"
                style="@style/welcome_btn"
            />

        <Button android:id="@+id/openPurchasesBtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/openPurchasesBtnCaption"
                android:background="@drawable/red_button"
                android:layout_margin="2dp"
                style="@style/welcome_btn"
            />
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="0dp"
                  android:layout_weight="3"
                  android:orientation="horizontal"
                  >

        <Button android:id="@+id/purchaseHistoryBtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/purchaseHistoryBtnCaption"
                android:background="@drawable/orange_button"
                android:layout_margin="2dp"
                style="@style/welcome_btn"
            />

        <Button android:id="@+id/settingsBtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/settingsBtnCaption"
                android:background="@drawable/blue_button"
                android:layout_margin="2dp"
                style="@style/welcome_btn"
            />

    </LinearLayout>

    <!--<Button android:id="@+id/managementBtn"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="2"-->
    <!--android:text="@string/managementBtnCaption"-->
    <!--android:textSize="20sp"-->
    <!--/>-->


</LinearLayout>